Fixes for header invisibility on screen-filled pages (#265)
* fix(utils) Set flex defaults for all children of screen-fill-body

* fix(header): workaround for browser bug that hides some flex children

--- a/src/pivotal-ui/components/utils/utils.scss
+++ b/src/pivotal-ui/components/utils/utils.scss
@@ -378,6 +378,9 @@ Screen-filling classes are utilities to make the root elements behave in a way t
   flex-direction: column;
   min-height: 100%;
   justify-content: space-between;
+  &>* {
+   flex: 0 0 auto;
+  }
 }
 
 .screen-fill-main {
